--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 
   section Level 4 - (Non-weighted)
   Induction :done, 2024-09-09, 2024-09-20
-  Project 1 (FN4004 - Design Process 1) : crit, 2024-09-23, 2024-10-21
+  Project 1 (FN4004 - Design Process 1) : active, 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
-  Summative Assessment Submission (FN4004) : milestone, 2024-10-21, 1d
+  Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
   TB1 Enrichment Week : 2024-10-28, 2024-11-01
   Formative Feedback (FN4004) : milestone, 2024-12-02, 1d
   Toile Development (FN4005) : 2025-01-06, 2025-02-14
-  Project 3 (FN4004) : crit, 2025-01-13, 2025-03-17
+  Project 3 (FN4004) : active, 2025-01-13, 2025-03-17
   Formative Feedback (FN4005) : milestone, 2025-02-10, 1d
   TB2 Enrichment Week : 2025-02-17, 2025-02-21
   Portfolio Development (FN4005) : active, 2025-02-24, 2025-03-17
