--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       themeVariables: {
         primaryColor: '#e9ecef',
         edgeLabelBackground:'#dee2e6',
-        tertiaryColor: '#f8f9fa',
+        tertiaryColor: '#f1f1f1',
         secondaryColor: '#adb5bd',
         noteBkgColor: '#e2e3e5',
         noteTextColor: '#333333',
@@ -31,7 +31,7 @@
         numberSectionStyles: 4,
         axisFormat: '%b %Y',
         tickInterval: '1month',
-        todayMarker: 'stroke-width:2px,stroke:#ff4d4f,opacity:0.8'
+        todayMarker: 'stroke-width:2px,stroke:#FFED00,opacity:0.8'
       }
     });
   </script>
@@ -77,7 +77,7 @@
   <div class="ku-content-wrapper">
     <div class="ku-content">
       <div class="header">
-        <img src="KSA_secondary_lock-up.png" alt="Kingston School of Art Logo" class="h-12 mb-4 mx-auto block">
+        <img src="KSA_secondary_lock-up.png" alt="Kingston School of Art Logo" class="h-6 mb-4 mx-auto block">
         <h1 class="text-2xl font-bold mb-4">BA (Hons) Fashion Program Feedback and Assessment Timeline</h1>
         <p>
           This timeline visualizes your feedback and assessment journey over three years. Note that Year 1 is non-weighted, whereas Year 2 contributes 20% and Year 3 contributes 80% towards your total assessment mark and final degree classification.
@@ -88,7 +88,7 @@
       <!-- Mermaid Diagram Container -->
       <div class="mermaid">
         gantt
-  dateFormat  YYYY-MM-DD
+  dateFormat  DD-MM-YY
   axisFormat %m-%Y
   excludes weekends
 
@@ -108,18 +108,18 @@
   Formative Feedback (FN4005) : milestone, 2025-02-10, 1d
   TB2 Enrichment Week : 2025-02-17, 2025-02-21
   Portfolio Development (FN4005) : active, 2025-02-24, 2025-03-17
-  Summative Submission (FN4005) : milestone, 2025-03-17, 1d
+  Summative Submission (FN4005) : milestone, crit, 2025-03-17, 1d
   Historical Themes Research (HA4104) : 2024-09-23, 2024-11-22
   Essay Planning (HA4104) : 2024-11-25, 2024-12-06
   Essay Writing Period (HA4104) : active, 2025-01-06, 2025-02-28
-  CHS Submission (HA4104) : milestone, 2025-03-03, 1d
+  CHS Summative Assessment Submission (HA4104) : milestone, crit, 2025-03-03, 1d
   Continuous Assessment (FN4002) : done, 2024-09-01, 2025-06-30
 
   section Level 5 - (Weighted 20%, TB2)
   Induction : done, 2025-09-09, 2025-09-20
   Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
-  Project Submission (FN5001) : milestone, 2025-10-21, 1d
+  Project Submission (FN5001) : milestone, crit, 2025-10-21, 1d
   Design Process Tutorials (FN5001) : 2025-10-22, 2025-12-13
   Major Project Phase 1 (FN5001) : 2025-10-24, 2025-12-13
   Enrichment Week (FN5001) : 2025-10-28, 2025-11-01
@@ -129,18 +129,18 @@
   Mid-Point Formative (FN5003) : milestone, 2026-02-10, 1d
   Enrichment Week (FN5003) : 2026-02-17, 2026-02-21
   Portfolio Development (FN5003) : 2026-02-24, 2026-03-17
-  Final Project Submission (FN5003) : milestone, 2026-03-17, 1d
+  Final Project Submission (FN5003) : milestone, crit, 2026-03-17, 1d
   Historical Themes Research (HA5107) : 2025-09-23, 2025-11-22
   Essay Planning (HA5107) : 2025-11-25, 2025-12-06
   Essay Writing Period (HA5107) : active, 2026-01-06, 2026-02-28
-  CHS Submission (HA5107) : milestone, 2026-03-03, 1d
+  CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
   Continuous Assessment (FN5002) : done, 2025-09-01, 2026-06-30
 
   section Level 6 - Year 3 (Weighted 80%, TB3)
   Induction : done, 2026-09-09, 2026-09-20
   Project Kick-Off (FN6001 - Design Process 3) : 2026-09-23, 2026-10-21
   Formative Feedback (FN6001) : milestone, 2026-10-14, 1d
-  Project Submission (FN6001) : milestone, 2026-10-21, 1d
+  Project Submission (FN6001) : milestone, crit, 2026-10-21, 1d
   Design Process Tutorials (FN6001) : 2026-10-22, 2026-12-13
   Major Project Phase 1 (FN6001) : 2026-10-24, 2026-12-13
   Enrichment Week (FN6001) : 2026-10-28, 2026-11-01
@@ -150,11 +150,11 @@
   Mid-Point Formative (FN6004) : milestone, 2027-02-10, 1d
   Enrichment Week (FN6004) : 2027-02-17, 2027-02-21
   Portfolio Development (FN6004) : 2027-02-24, 2027-03-17
-  Final Project Submission (FN6004) : milestone, 2027-03-17, 1d
+  Final Project Submission (FN6004) : milestone, crit, 2027-03-17, 1d
   Historical Themes Research (HA6101) : 2026-09-23, 2026-11-22
   Essay Planning (HA6101) : 2026-11-25, 2026-12-06
   Essay Writing Period (HA6101) : active, 2027-01-06, 2027-02-28
-  CHS Submission (HA6101) : milestone, 2027-03-03, 1d
+  CHS Submission (HA6101) : milestone, crit, 2027-03-03, 1d
       </div>
     </div>
 
