--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- Mermaid Diagram Container -->
       <div class="mermaid">
         gantt
-  dateFormat  DD-MM-YY
+  dateFormat  DD-MM-YYYY
   axisFormat %m-%Y
   excludes weekends
 
@@ -100,7 +100,7 @@
   Project 1 (FN4004 - Design Process 1) : active, 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
-  Project 2 (FN4004) : 2024-10-24, 2024-12-13
+  Project 2 (FN4004) : active, 2024-10-24, 2024-12-13
   TB1 Enrichment Week : 2024-10-28, 2024-11-01
   Formative Feedback (FN4004) : milestone, 2024-12-02, 1d
   Toile Development (FN4005) : 2025-01-06, 2025-02-14
@@ -115,7 +115,7 @@
   CHS Summative Assessment Submission (HA4104) : milestone, crit, 2025-03-03, 1d
   Continuous Assessment (FN4002) : done, 2024-09-01, 2025-06-30
 
-  section Level 5 - (Weighted 20%, TB2)
+  section Level 5 - (Weighted 20%)
   Induction : done, 2025-09-09, 2025-09-20
   Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
@@ -136,7 +136,7 @@
   CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
   Continuous Assessment (FN5002) : done, 2025-09-01, 2026-06-30
 
-  section Level 6 - Year 3 (Weighted 80%, TB3)
+  section Level 6 (Weighted 80%)
   Induction : done, 2026-09-09, 2026-09-20
   Project Kick-Off (FN6001 - Design Process 3) : 2026-09-23, 2026-10-21
   Formative Feedback (FN6001) : milestone, 2026-10-14, 1d
