--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- Mermaid Diagram Container -->
       <div class="mermaid">
         gantt
-  dateFormat  DD-MM-YYYY
+  dateFormat  yyyy-mm-dd
   axisFormat %m-%Y
   excludes weekends
 
