--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       themeVariables: {
         primaryColor: '#e9ecef',
         edgeLabelBackground:'#dee2e6',
-        tertiaryColor: '#f1f1f1',
+        tertiaryColor: '#f8f9fa',
         secondaryColor: '#adb5bd',
         noteBkgColor: '#e2e3e5',
         noteTextColor: '#333333',
@@ -31,7 +31,7 @@
         numberSectionStyles: 4,
         axisFormat: '%b %Y',
         tickInterval: '1month',
-        todayMarker: 'stroke-width:2px,stroke:#FFED00,opacity:0.8'
+        todayMarker: 'stroke-width:2px,stroke:#FFED00,opacity:1'
       }
     });
   </script>
@@ -88,7 +88,7 @@
       <!-- Mermaid Diagram Container -->
       <div class="mermaid">
         gantt
-  dateFormat  yyyy-mm-dd
+  dateFormat  YYY-MM-DD
   axisFormat %m-%Y
   excludes weekends
 
@@ -117,21 +117,21 @@
 
   section Level 5 - (Weighted 20%)
   Induction : done, 2025-09-09, 2025-09-20
-  Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
+  Project Kick-Off (FN5001 - Design Process 2) :active, 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
   Project Submission (FN5001) : milestone, crit, 2025-10-21, 1d
-  Design Process Tutorials (FN5001) : 2025-10-22, 2025-12-13
-  Major Project Phase 1 (FN5001) : 2025-10-24, 2025-12-13
-  Enrichment Week (FN5001) : 2025-10-28, 2025-11-01
+  Design Process Tutorials (FN5001) :active, 2025-10-22, 2025-12-13
+  Major Project Phase 1 (FN5001) :active, 2025-10-24, 2025-12-13
+  Enrichment Week (FN5001) :active, 2025-10-28, 2025-11-01
   Formative Review (FN5001) : milestone, 2025-12-02, 1d
-  Product Development (FN5003) : 2026-01-06, 2026-02-14
-  Icons & Muses (FN5001) : 2026-01-13, 2026-03-17
+  Product Development (FN5003) :active, 2026-01-06, 2026-02-14
+  Icons & Muses (FN5001) :active, 2026-01-13, 2026-03-17
   Mid-Point Formative (FN5003) : milestone, 2026-02-10, 1d
-  Enrichment Week (FN5003) : 2026-02-17, 2026-02-21
-  Portfolio Development (FN5003) : 2026-02-24, 2026-03-17
+  Enrichment Week (FN5003) :active, 2026-02-17, 2026-02-21
+  Portfolio Development (FN5003) :active, 2026-02-24, 2026-03-17
   Final Project Submission (FN5003) : milestone, crit, 2026-03-17, 1d
-  Historical Themes Research (HA5107) : 2025-09-23, 2025-11-22
-  Essay Planning (HA5107) : 2025-11-25, 2025-12-06
+  Historical Themes Research (HA5107) :active, 2025-09-23, 2025-11-22
+  Essay Planning (HA5107) :active, 2025-11-25, 2025-12-06
   Essay Writing Period (HA5107) : active, 2026-01-06, 2026-02-28
   CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
   Continuous Assessment (FN5002) : done, 2025-09-01, 2026-06-30
