--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
   section Level 4 - (Non-weighted)
   Induction :done, 2024-09-09, 2024-09-20
-  Project 1 (FN4004 - Design Process 1) : crit, 2024-09-23, 2024-10-21
+  Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
-  Summative Assessment Submission (FN4004) : milestone, 2024-10-21, 1d
+  Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
   TB1 Enrichment Week : 2024-10-28, 2024-11-01
   Formative Feedback (FN4004) : milestone, 2024-12-02, 1d
@@ -108,18 +108,18 @@
   Formative Feedback (FN4005) : milestone, 2025-02-10, 1d
   TB2 Enrichment Week : 2025-02-17, 2025-02-21
   Portfolio Development (FN4005) : active, 2025-02-24, 2025-03-17
-  Summative Submission (FN4005) : milestone, 2025-03-17, 1d
+  Summative Submission (FN4005) : milestone, crit, 2025-03-17, 1d
   Historical Themes Research (HA4104) : 2024-09-23, 2024-11-22
   Essay Planning (HA4104) : 2024-11-25, 2024-12-06
   Essay Writing Period (HA4104) : active, 2025-01-06, 2025-02-28
-  CHS Submission (HA4104) : milestone, 2025-03-03, 1d
+  CHS Submission (HA4104) : milestone, crit, 2025-03-03, 1d
   Continuous Assessment (FN4002) : done, 2024-09-01, 2025-06-30
 
   section Level 5 - (Weighted 20%, TB2)
   Induction : done, 2025-09-09, 2025-09-20
   Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
-  Project Submission (FN5001) : milestone, 2025-10-21, 1d
+  Project Submission (FN5001) : milestone, crit, 2025-10-21, 1d
   Design Process Tutorials (FN5001) : 2025-10-22, 2025-12-13
   Major Project Phase 1 (FN5001) : 2025-10-24, 2025-12-13
   Enrichment Week (FN5001) : 2025-10-28, 2025-11-01
@@ -129,18 +129,18 @@
   Mid-Point Formative (FN5003) : milestone, 2026-02-10, 1d
   Enrichment Week (FN5003) : 2026-02-17, 2026-02-21
   Portfolio Development (FN5003) : 2026-02-24, 2026-03-17
-  Final Project Submission (FN5003) : milestone, 2026-03-17, 1d
+  Final Project Submission (FN5003) : milestone, crit, 2026-03-17, 1d
   Historical Themes Research (HA5107) : 2025-09-23, 2025-11-22
   Essay Planning (HA5107) : 2025-11-25, 2025-12-06
   Essay Writing Period (HA5107) : active, 2026-01-06, 2026-02-28
-  CHS Submission (HA5107) : milestone, 2026-03-03, 1d
+  CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
   Continuous Assessment (FN5002) : done, 2025-09-01, 2026-06-30
 
   section Level 6 - Year 3 (Weighted 80%, TB3)
   Induction : done, 2026-09-09, 2026-09-20
   Project Kick-Off (FN6001 - Design Process 3) : 2026-09-23, 2026-10-21
   Formative Feedback (FN6001) : milestone, 2026-10-14, 1d
-  Project Submission (FN6001) : milestone, 2026-10-21, 1d
+  Project Submission (FN6001) : milestone, crit, 2026-10-21, 1d
   Design Process Tutorials (FN6001) : 2026-10-22, 2026-12-13
   Major Project Phase 1 (FN6001) : 2026-10-24, 2026-12-13
   Enrichment Week (FN6001) : 2026-10-28, 2026-11-01
@@ -150,11 +150,11 @@
   Mid-Point Formative (FN6004) : milestone, 2027-02-10, 1d
   Enrichment Week (FN6004) : 2027-02-17, 2027-02-21
   Portfolio Development (FN6004) : 2027-02-24, 2027-03-17
-  Final Project Submission (FN6004) : milestone, 2027-03-17, 1d
+  Final Project Submission (FN6004) : milestone, crit, 2027-03-17, 1d
   Historical Themes Research (HA6101) : 2026-09-23, 2026-11-22
   Essay Planning (HA6101) : 2026-11-25, 2026-12-06
   Essay Writing Period (HA6101) : active, 2027-01-06, 2027-02-28
-  CHS Submission (HA6101) : milestone, 2027-03-03, 1d
+  CHS Submission (HA6101) : milestone, crit, 2027-03-03, 1d
       </div>
     </div>
 
