--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
-  TB1 Enrichment Week : 2024-10-28, 2024-11-01
+  TB1 Enrichment Week :done, 2024-10-28, 2024-11-01
   Formative Feedback (FN4004) : milestone, 2024-12-02, 1d
   Toile Development (FN4005) : 2025-01-06, 2025-02-14
-  Project 3 (FN4004) : crit, 2025-01-13, 2025-03-17
+  Project 3 (FN4004) : 2025-01-13, 2025-03-17
   Formative Feedback (FN4005) : milestone, 2025-02-10, 1d
-  TB2 Enrichment Week : 2025-02-17, 2025-02-21
-  Portfolio Development (FN4005) : active, 2025-02-24, 2025-03-17
+  TB2 Enrichment Week :done, 2025-02-17, 2025-02-21
+  Portfolio Development (FN4005) : 2025-02-24, 2025-03-17
   Summative Submission (FN4005) : milestone, crit, 2025-03-17, 1d
   Historical Themes Research (HA4104) : 2024-09-23, 2024-11-22
   Essay Planning (HA4104) : 2024-11-25, 2024-12-06
@@ -122,12 +122,12 @@
   Project Submission (FN5001) : milestone, crit, 2025-10-21, 1d
   Design Process Tutorials (FN5001) : 2025-10-22, 2025-12-13
   Major Project Phase 1 (FN5001) : 2025-10-24, 2025-12-13
-  Enrichment Week (FN5001) : 2025-10-28, 2025-11-01
+  TB1 Enrichment Week (FN5001) :done, 2025-10-28, 2025-11-01
   Formative Review (FN5001) : milestone, 2025-12-02, 1d
   Product Development (FN5003) : 2026-01-06, 2026-02-14
   Icons & Muses (FN5001) : 2026-01-13, 2026-03-17
   Mid-Point Formative (FN5003) : milestone, 2026-02-10, 1d
-  Enrichment Week (FN5003) : 2026-02-17, 2026-02-21
+  TB2 Enrichment Week (FN5003) :done, 2026-02-17, 2026-02-21
   Portfolio Development (FN5003) : 2026-02-24, 2026-03-17
   Final Project Submission (FN5003) : milestone, crit, 2026-03-17, 1d
   Historical Themes Research (HA5107) : 2025-09-23, 2025-11-22
@@ -143,12 +143,12 @@
   Project Submission (FN6001) : milestone, crit, 2026-10-21, 1d
   Design Process Tutorials (FN6001) : 2026-10-22, 2026-12-13
   Major Project Phase 1 (FN6001) : 2026-10-24, 2026-12-13
-  Enrichment Week (FN6001) : 2026-10-28, 2026-11-01
+  TB1 Enrichment Week (FN6001) :done, 2026-10-28, 2026-11-01
   Formative Review (FN6001) : milestone, 2026-12-02, 1d
   Product Development (FN6004) : 2027-01-06, 2027-02-14
   Icons & Muses (FN6004) : 2027-01-13, 2027-03-17
   Mid-Point Formative (FN6004) : milestone, 2027-02-10, 1d
-  Enrichment Week (FN6004) : 2027-02-17, 2027-02-21
+  TB2 Enrichment Week (FN6004) :done, 2027-02-17, 2027-02-21
   Portfolio Development (FN6004) : 2027-02-24, 2027-03-17
   Final Project Submission (FN6004) : milestone, crit, 2027-03-17, 1d
   Historical Themes Research (HA6101) : 2026-09-23, 2026-11-22
