--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   title Academic Project Timeline for Design Course
 
   section Level 4 - (Non-weighted)
-  Induction :done, 2024-09-09, 2024-09-20
+  Induction : 2024-09-09, 2024-09-20
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
@@ -111,12 +111,12 @@
   Summative Submission (FN4005) : milestone, crit, 2025-03-17, 1d
   Historical Themes Research (HA4104) : 2024-09-23, 2024-11-22
   Essay Planning (HA4104) : 2024-11-25, 2024-12-06
-  Essay Writing Period (HA4104) : active, 2025-01-06, 2025-02-28
+  Essay Writing Period (HA4104) : 2025-01-06, 2025-02-28
   CHS Submission (HA4104) : milestone, crit, 2025-03-03, 1d
-  Continuous Assessment (FN4002) : done, 2024-09-01, 2025-06-30
+  Continuous Assessment (FN4002) : 2024-09-01, 2025-06-30
 
   section Level 5 - (Weighted 20%, TB2)
-  Induction : done, 2025-09-09, 2025-09-20
+  Induction : 2025-09-09, 2025-09-20
   Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
   Project Submission (FN5001) : milestone, crit, 2025-10-21, 1d
@@ -132,12 +132,12 @@
   Final Project Submission (FN5003) : milestone, crit, 2026-03-17, 1d
   Historical Themes Research (HA5107) : 2025-09-23, 2025-11-22
   Essay Planning (HA5107) : 2025-11-25, 2025-12-06
-  Essay Writing Period (HA5107) : active, 2026-01-06, 2026-02-28
+  Essay Writing Period (HA5107) : 2026-01-06, 2026-02-28
   CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
-  Continuous Assessment (FN5002) : done, 2025-09-01, 2026-06-30
+  Continuous Assessment (FN5002) : 2025-09-01, 2026-06-30
 
   section Level 6 - Year 3 (Weighted 80%, TB3)
-  Induction : done, 2026-09-09, 2026-09-20
+  Induction : 2026-09-09, 2026-09-20
   Project Kick-Off (FN6001 - Design Process 3) : 2026-09-23, 2026-10-21
   Formative Feedback (FN6001) : milestone, 2026-10-14, 1d
   Project Submission (FN6001) : milestone, crit, 2026-10-21, 1d
@@ -153,7 +153,7 @@
   Final Project Submission (FN6004) : milestone, crit, 2027-03-17, 1d
   Historical Themes Research (HA6101) : 2026-09-23, 2026-11-22
   Essay Planning (HA6101) : 2026-11-25, 2026-12-06
-  Essay Writing Period (HA6101) : active, 2027-01-06, 2027-02-28
+  Essay Writing Period (HA6101) : 2027-01-06, 2027-02-28
   CHS Submission (HA6101) : milestone, crit, 2027-03-03, 1d
       </div>
     </div>
