--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   %% Reimagined academic timeline
   title Academic Project Timeline for Design Course
 
-  section Level 4 - (Non-weighted)
+  section Level 4 - Non-weighted
   Induction : 2024-09-09, 2024-09-20
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
@@ -115,7 +115,7 @@
   CHS Submission (HA4104) : milestone, crit, 2025-03-03, 1d
   Continuous Assessment (FN4002) : 2024-09-01, 2025-06-30
 
-  section Level 5 - (Weighted 20%, TB2)
+  section Level 5 - Weighted 20%
   Induction : 2025-09-09, 2025-09-20
   Project Kick-Off (FN5001 - Design Process 2) : 2025-09-23, 2025-10-21
   Formative Feedback (FN5001) : milestone, 2025-10-14, 1d
@@ -136,7 +136,7 @@
   CHS Submission (HA5107) : milestone, crit, 2026-03-03, 1d
   Continuous Assessment (FN5002) : 2025-09-01, 2026-06-30
 
-  section Level 6 - Year 3 (Weighted 80%, TB3)
+  section Level 6 - Weighted 80%
   Induction : 2026-09-09, 2026-09-20
   Project Kick-Off (FN6001 - Design Process 3) : 2026-09-23, 2026-10-21
   Formative Feedback (FN6001) : milestone, 2026-10-14, 1d
