--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     style todayMarker fill:#F00,stroke-width:5px,stroke:#F00,opacity:0.5
     style grid.stroke fill:none,stroke:#ccc,stroke-dasharray:2,2
     classDef critical fill:#F96,stroke-width:2px,stroke:#F66
-    classDef milestone fill:#F00,stroke-width:2px,stroke-dasharray:2 2
+    classDef milestone fill:#f1f1f1,stroke-width:2px,stroke-dasharray:2,2
 
   section Level 4 - Non-weighted
   Induction : 2024-09-09, 2024-09-20
