--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         numberSectionStyles: 4,
         axisFormat: '%b %Y',
         tickInterval: '1month',
-        todayMarker: 'stroke-width:2px,stroke:#ff4d4f,opacity:0.8'
+        todayMarker: 'stroke-width:2px,stroke:#FFED00,opacity:1'
       }
     });
   </script>
@@ -91,12 +91,7 @@
   dateFormat  YYYY-MM-DD
   axisFormat %m-%Y
   excludes weekends
-
-   %% CSS styles for customization
-    style todayMarker fill:#F00,stroke-width:5px,stroke:#F00,opacity:0.5
-    style grid.stroke fill:none,stroke:#ccc,stroke-dasharray:2,2
-    classDef critical fill:#F96,stroke-width:2px,stroke:#F66
-    classDef milestone fill:#f1f1f1,stroke-width:2px,stroke-dasharray:2,2
+        
 
   section Level 4 - Non-weighted
   Induction : 2024-09-09, 2024-09-20
