--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         numberSectionStyles: 4,
         axisFormat: '%b %Y',
         tickInterval: '1month',
-        todayMarker: 'stroke-width:2px,stroke:#FFED00,opacity:1'
+        style todayMarker fill:#FFED00,stroke-width:2px,stroke:#FFED00,opacity:0.5
       }
     });
   </script>
