--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         numberSectionStyles: 4,
         axisFormat: '%b %Y',
         tickInterval: '1month',
-        style todayMarker fill:#FFED00,stroke-width:2px,stroke:#FFED00,opacity:0.5
-        classDef milestone fill:#f1f1f1,stroke-width:2px,stroke-dasharray:2 2
+        style todayMarker: fill: #FFED00, stroke-width: 2px, stroke: #FFED00, opacity: 0.5,
+        classDef milestone: fill: #f1f1f1, stroke-width: 2px, stroke-dasharray: 2 2,
       }
     });
   </script>
