--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         noteBorderColor: '#ced4da',
         lineColor: '#6c757d',
         textColor: '#495057'
+        todayMarker: fill: #FFED00, stroke-width: 2px, stroke: #FFED00, opacity: 0.5,
+        milestone: fill: #f1f1f1, stroke-width: 2px, stroke-dasharray: 2 2,
       },
       gantt: {
         titleTopMargin: 25,
