--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         noteTextColor: '#333333',
         noteBorderColor: '#ced4da',
         lineColor: '#6c757d',
-        textColor: '#495057'
+        textColor: '#495057',
+        ganttTaskFillColor: '#ccc',
+        ganttTaskTextColor: '#333',
+        ganttAccentColor: '#666'
       },
       gantt: {
         titleTopMargin: 25,
@@ -32,12 +35,6 @@
         axisFormat: '%b %Y',
         tickInterval: '1month',
         todayMarker: fill: #FFED00, stroke-width: 2px, stroke: #FFED00, opacity: 0.5,
-            "theme": "default",
-            "themeVariables": {
-                "ganttTaskFillColor": "#ccc",
-                "ganttTaskTextColor": "#333",
-                "ganttAccentColor": "#666"
-            } 
       }
     });
   </script>
