--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         noteBorderColor: '#ced4da',
         lineColor: '#6c757d',
         textColor: '#495057',
-        ganttTaskFillColor: '#ccc',
-        ganttTaskTextColor: '#333',
-        ganttAccentColor: '#666'
+        "ganttTaskFillColor": '#ccc',
+        "ganttTaskTextColor": '#333',
+        "ganttAccentColor": '#666'
       },
       gantt: {
         titleTopMargin: 25,
@@ -100,6 +100,7 @@
   Induction : 2024-09-09, 2024-09-20
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) : milestone, 2024-10-14, 1d
+  click Formative Feedback (FN4004) href "https://canvas.kingston.ac.uk/courses/32501/pages/playful-placeholder" "Open Page A in a new tab" _blank
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
   TB1 Enrichment Week :done, 2024-10-28, 2024-11-01
