--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   section Level 4 - Non-weighted
   Induction : 2024-09-09, 1w
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
-  Formative Feedback (FN4004) : milestone, 2024-10-14, 1d      
+  Formative Feedback (FN4004) : TaskA, milestone, 2024-10-14, 1d  
+  click taskA href "https://docs.mermaidchart.com/mermaid/gantt/syntax" "Open Page A in a new tab" _blank
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
   TB1 Enrichment Week :done, 2024-10-28, 2024-11-01
