--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -96,7 +95,7 @@
   section Level 4 - Non-weighted
   Induction : 2024-09-09, 1w
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
-  Formative Feedback (FN4004) :taskA, milestone, 2024-10-14, 1d
+  Formative Feedback (FN4004) :milestone, taskA, 2024-10-14, 1d
   click taskA href "https://www.bbc.co.uk/news" "https://www.bbc.co.uk/news"      
   Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
