--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
   Project 1 (FN4004 - Design Process 1) : 2024-09-23, 2024-10-21
   Formative Feedback (FN4004) :milestone, taskA, 2024-10-14, 1d
   click taskA href "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder" "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder"      
-  Summative Assessment Submission (FN4004) : milestone, crit, 2024-10-21, 1d
+  Summative Assessment Submission (FN4004) : milestone, crit, taskB, 2024-10-21, 1d
+  click taskB href "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder" "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder"
   Project 2 (FN4004) : 2024-10-24, 2024-12-13
   TB1 Enrichment Week :done, 2024-10-28, 2024-11-01
   Formative Feedback (FN4004) : milestone, 2024-12-02, 1d
