--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         <h1 class="text-2xl font-bold mb-4">BA (Hons) Fashion Program Feedback and Assessment Timeline</h1>
         <p>
           This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. It is important to note that Year 1 is non-weighted, where as Year 2 contributes 20%, and Year 3 contributes 80% towards your total assessment mark and final degree classification.
-          This allows for great experimentation and discovery across the first two years, with little consequence for failure. Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well. The timeline displays formative feedback opportunities and summative submission deadlines. Click on their icons to learn more about what these sessions entail.<br>
+          This allows for great experimentation and discovery across the first two years, with little consequence for failure. 
+          "Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well."
+          The timeline displays formative feedback opportunities and summative submission deadlines. Click on their icons to learn more about the nature of these sessions.<br>
         </p>
       </div>
 
