--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   This allows for great experimentation and discovery across the first two years, with little consequence for failure.
 </p>
 
-<blockquote>
+<blockquote style="margin: 20px 0;">
   <em>"Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well."</em>
 </blockquote>
 
