--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </blockquote>
 
 <p>
-  The timeline displays formative feedback opportunities and summative submission deadlines. Click on their icons to learn more about the nature of these sessions.
+  The timeline highlights both formative feedback sessions and summative submission deadlines. Each milestone on the timeline is interactive — clicking them provides additional details about the session, allowing you to learn more about its purpose and expectations.
 </p>
       </div>
 
