--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
         <img src="KSA_secondary_lock-up.png" alt="Kingston School of Art Logo" class="h-6 mb-4 mx-auto block">
         <h1 class="text-2xl font-bold mb-4">BA (Hons) Fashion Program Feedback and Assessment Timeline</h1>
        <p>
-  This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. It is important to note that Year 1 is non-weighted, whereas Year 2 contributes 20%, and Year 3 contributes 80% towards your total assessment mark and final degree classification.
-  This allows for great experimentation and discovery across the first two years, with little consequence for failure.
+  This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program.
 </p>
-
+<blockquote>
+Year 1: Non-weighted, allowing for experimentation and exploration without high stakes.
+Year 2: Contributes 20% to your final mark.
+Year 3: Carries the majority of the weight at 80%, emphasizing the importance of your final year work.
+  </blockquote>
+<p>
 <blockquote style="margin: 20px 0;">
   <em>"Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well."</em>
 </blockquote>
-
 <p>
-  The timeline highlights both formative feedback sessions and summative submission deadlines. Each milestone on the timeline is interactive — clicking them provides additional details about the session, allowing you to learn more about its purpose and expectations.
+  The timeline highlights both formative feedback sessions and summative submission deadlines. Each of these 'milestones' is interactive — clicking them provides additional details about the session, allowing you to learn more about its purpose and expectations.
 </p>
       </div>
 
