--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 </p>
 <blockquote>
 Year 1: Non-weighted, allowing for experimentation and exploration without high stakes.
-Year 2: Contributes 20% to your final mark.
-Year 3: Carries the majority of the weight at 80%, emphasizing the importance of your final year work.
+Year 2: Contributes 20% to your final mark, reflecting the adoption of Professional Practice.
+Year 3: Carries the majority of the weight at 80%, emphasising the importance of your final year work.
   </blockquote>
 <p>
 <blockquote style="margin: 20px 0;">
