--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         <img src="KSA_secondary_lock-up.png" alt="Kingston School of Art Logo" class="h-6 mb-4 mx-auto block">
         <h1 class="text-2xl font-bold mb-4">BA (Hons) Fashion Program Feedback and Assessment Timeline</h1>
        <p>
-  This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program.
+  This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. It demonstrates how assessment weighting contributes to your final degree classification.
 </p>
+<p>
+   </p>
 <p>
 Year 1: Non-weighted, allowing for experimentation and exploration without high stakes.
    </p>
@@ -93,7 +95,9 @@ Year 3: Carries the majority of the weight at 80%, emphasising the importance of
 <p>
 <blockquote style="margin: 20px 0;">
   <em>"Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well."</em>
-</blockquote>
+<p> 
+  Staff memeber or Fashion Designer quote
+</p></blockquote>
 <p>
   The timeline highlights both formative feedback sessions and summative submission deadlines. Each of these 'milestones' is interactive — clicking them provides additional details about the session, allowing you to learn more about its purpose and expectations.
 </p>
