--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Year 3: Carries the majority of the weight at 80%, emphasising the importance of
 <blockquote style="margin: 20px 0;">
   <em>"Commitment to practice is the key to progress, and through failure, we often uncover the most valuable lessons that teach us resilience, and gain insights that lead to deeper understanding, growth and mastery. Use this time well."</em>
 <p> 
-  Staff memeber or Fashion Designer quote
+  Staff member or Fashion Designer quote
 </p></blockquote>
 <p>
   The timeline highlights both formative feedback sessions and summative submission deadlines. Each of these 'milestones' is interactive — clicking them provides additional details about the session, allowing you to learn more about its purpose and expectations.
