--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <p>
   This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. It demonstrates how assessment weighting contributes to your final degree classification.
 </p>
-<p style="margin: 20px 0;">
+<p style="margin-top: 20px">
 Year 1: Non-weighted, allowing for experimentation and exploration without high stakes.
    </p>
 <p>      
