--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
       <div class="header">
         <img src="KSA_secondary_lock-up.png" alt="Kingston School of Art Logo" class="h-6 mb-4 mx-auto block">
         <h1 class="text-2xl font-bold mb-4">BA (Hons) Fashion Program Feedback and Assessment Timeline</h1>
-       <p>
-  This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. It demonstrates how assessment weighting contributes to your final degree classification.
-</p>
+<p>
+This timeline visualizes your feedback and assessment journey over the duration of the BA (Hons) Fashion Program. 
+  </p>
+<p>
+It demonstrates how assessment weighting contributes to your final degree classification.
+  </p>
 <p style="margin-top: 20px">
 Year 1: Non-weighted, allowing for experimentation and exploration without high stakes.
-   </p>
+  </p>
 <p>      
 Year 2: Contributes 20% to your final mark, reflecting the adoption of Professional Practice.
   </p>  
