--- a/index.html
+++ b/index.html
@@ -737,9 +737,9 @@
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Assessment of your project outcomes, contributing to your 20% Year 2 weighting.<br><br><span class='expectations-text'>Expectations:</span> Submit all project components as specified in the brief. Ensure your work demonstrates progress in both technical and conceptual development.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'winterBreak_y2', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
-            { id: 'designTutorials', name: 'Design Process Tutorials (FN5001)', start: 16, duration: 2, type: 'project' },
+            { id: 'designTutorials', name: 'Professional Practice', start: 16, duration: 2, type: 'project' },
             { id: 'enrichment2_y2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
-            { id: 'majorProject1', name: 'Major Project Phase 1 (FN5001)', start: 19, duration: 5, type: 'project' },
+            { id: 'majorProject1', name: 'Professional Practice', start: 19, duration: 5, type: 'project' },
             { id: 'formativeReview', name: 'Formative Review (FN5001)', start: 17, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Comprehensive review of your work to date with industry feedback.<br><br><span class='expectations-text'>Expectations:</span> Present your portfolio of work to date and be prepared to discuss your design direction with industry professionals. Consider how to implement their feedback in your ongoing work.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
