--- a/index.html
+++ b/index.html
@@ -727,9 +727,9 @@
           weeks: 33, // Total teaching weeks plus breaks
           items: [
             { id: 'induction2', name: 'Induction', start: 0, duration: 1, type: 'project' },
-            { id: 'project1_y2', name: 'Project One (FN5001)', start: 1, duration: 5, type: 'project' },
+            { id: 'project1_y2', name: 'Design Proces - Project One', start: 1, duration: 5, type: 'project' },
             { id: 'enrichment1_y2', name: 'Enrichment Week', start: 6, duration: 1, type: 'project' },
-            { id: 'project2_y2', name: 'Project Two (FN5001)', start: 7, duration: 5, type: 'project' },
+            { id: 'project2_y2', name: 'Design Proces - Project Two', start: 7, duration: 5, type: 'project' },
             { id: 'formative1_y2', name: 'Formative Feedback (FN5001)', start: 5, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Mid-project feedback focusing on your design development and concept research.<br><br><span class='expectations-text'>Expectations:</span> Present your research, concept development, and initial designs. Be prepared to explain your design rationale and research methodology.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
@@ -737,10 +737,10 @@
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Assessment of your project outcomes, contributing to your 20% Year 2 weighting.<br><br><span class='expectations-text'>Expectations:</span> Submit all project components as specified in the brief. Ensure your work demonstrates progress in both technical and conceptual development.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'winterBreak_y2', name: 'Winter Vacation', start: 13, duration: 3, type: 'project' },
-            { id: 'designTutorials', name: 'Professional Practice', start: 16, duration: 2, type: 'project' },
+            { id: 'designTutorials', name: 'Professional Practice - Project One', start: 16, duration: 2, type: 'project' },
             { id: 'enrichment2_y2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
-            { id: 'majorProject1', name: 'Professional Practice', start: 19, duration: 5, type: 'project' },
-            { id: 'formativeReview', name: 'Formative Review (FN5001)', start: 17, duration: 0, type: 'formative', 
+            { id: 'majorProject1', name: 'Professional Practice - Project Two', start: 19, duration: 5, type: 'project' },
+            { id: 'formativeReview', name: 'Formative Review (FN5002)', start: 17, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Comprehensive review of your work to date with industry feedback.<br><br><span class='expectations-text'>Expectations:</span> Present your portfolio of work to date and be prepared to discuss your design direction with industry professionals. Consider how to implement their feedback in your ongoing work.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'productDev', name: 'Product Development (FN5003)', start: 19, duration: 5, type: 'project' },
