--- a/index.html
+++ b/index.html
@@ -740,14 +740,14 @@
             { id: 'designTutorials', name: 'Professional Practice - Project One', start: 16, duration: 2, type: 'project' },
             { id: 'enrichment2_y2', name: 'Enrichment Week', start: 18, duration: 1, type: 'project' },
             { id: 'majorProject1', name: 'Professional Practice - Project Two', start: 19, duration: 5, type: 'project' },
-            { id: 'formativeReview', name: 'Formative Review (FN5002)', start: 17, duration: 0, type: 'formative', 
+            { id: 'formativeReview', name: 'Formative Feedback (FN5002)', start: 17, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Comprehensive review of your work to date with industry feedback.<br><br><span class='expectations-text'>Expectations:</span> Present your portfolio of work to date and be prepared to discuss your design direction with industry professionals. Consider how to implement their feedback in your ongoing work.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'productDev', name: 'Product Development (FN5003)', start: 19, duration: 5, type: 'project' },
-            { id: 'midPoint', name: 'Mid-Point Formative (FN5002)', start: 24, duration: 0, type: 'formative', 
+            { id: 'midPoint', name: 'Formative Feedback (FN5002)', start: 23, duration: 0, type: 'formative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Technical and creative feedback on your product development work.<br><br><span class='expectations-text'>Expectations:</span> Present your technical samples, prototypes, and development work. Be ready to discuss manufacturing considerations and material choices.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
-            { id: 'finalSubmission_y2', name: 'Final Project Submission (FN5003)', start: 24, duration: 0, type: 'summative', 
+            { id: 'finalSubmission_y2', name: 'Summative Submission (FN5002)', start: 24, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final assessment of your Year 2 projects and portfolio.<br><br><span class='expectations-text'>Expectations:</span> Submit a comprehensive portfolio demonstrating your technical, creative, and professional development throughout the year. Include all project outcomes as specified in the brief.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'springBreak_y2', name: 'Spring Break', start: 25, duration: 3, type: 'project' },
@@ -755,9 +755,6 @@
             { id: 'historical_y2', name: 'Historical Themes Research (HA5107)', start: 1, duration: 12, type: 'project' },
             { id: 'essayPlanning_y2', name: 'Essay Planning (HA5107)', start: 16, duration: 6, type: 'project' },
             { id: 'essayWriting_y2', name: 'Essay Writing Period (HA5107)', start: 22, duration: 6, type: 'project' },
-            { id: 'portfolioSubmission_y2', name: 'Final Portfolio Submission', start: 31, duration: 0, type: 'summative', 
-              link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
-              details: "Final portfolio submission for Year 2.<br><br><span class='expectations-text'>Expectations:</span> Submit a comprehensive and professional portfolio that demonstrates your development throughout the year. Include all required components as specified in the brief.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
             { id: 'chsSubmission_y2', name: 'CHS Submission (HA5107)', start: 28, duration: 0, type: 'summative', 
               link: "https://canvas.kingston.ac.uk/courses/32501/pages/placeholder",
               details: "Final submission of your Year 2 Cultural & Historical Studies essay.<br><br><span class='expectations-text'>Expectations:</span> Submit a well-researched academic essay with proper citations and bibliography. Your writing should demonstrate increased analytical sophistication from Year 1.<br><br><span class='always-refer-text'>Always refer to the project brief for definitive guidance and expectations.</span>" },
